--- a/P04BibliotekaPolaczenieZBaza/P04BibliotekaPolaczenieZBaza.csproj
+++ b/P04BibliotekaPolaczenieZBaza/P04BibliotekaPolaczenieZBaza.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="PolaczenieZBaza.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WynikRozbudowany.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
